--- a/style.css
+++ b/style.css
@@ -200,3 +200,19 @@ footer {
         font-size: 20px; /* Уменьшение размера текста специального предложения */
     }
 }
+/* Медиа-запрос для мобильных устройств */
+@media only screen and (max-width: 768px) {
+    nav ul li {
+        display: inline; /* Изменяем отображение элементов меню обратно на строчное */
+        margin-right: 20px; /* Возвращаем отступы между пунктами меню */
+    }
+
+    .about-photos {
+        display: flex; /* Возвращаем отображение фотографий в ряд */
+    }
+
+    .review {
+        flex: 0 0 calc(33.333% - 20px); /* Возвращаем ширину отзывов обратно на 33.33% */
+        margin: 10px; /* Возвращаем отступы между отзывами */
+    }
+}
